guacamole/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  labels:
    app: guacamole
spec:
  selector:
    matchLabels:
      app: guacamole
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      serviceAccount: guacamole
      containers:
        - name: guacamole
          image: "guacamole/guacamole:latest"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              cpu: 1
              memory: 512Mi
        - name: guacd
          image: "guacamole/guacd:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: guacd
              containerPort: 4822
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: guacd
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: guacd
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 25m
              memory: 24Mi
            limits:
              cpu: 250m
              memory: 64Mi
        - name: oauth-proxy
          image: openshift/oauth-proxy:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8443
              name: https
          args:
            - --https-address=:8443
            - --provider=openshift
            - --openshift-service-account=guacamole
            - --upstream=http://localhost:8080
            - --tls-cert=/etc/tls/private/tls.crt
            - --tls-key=/etc/tls/private/tls.key
            - --cookie-secret=SECRET
          volumeMounts:
            - mountPath: /etc/tls/private
              name: proxy-tls
          livenessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: https
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 25m
              memory:  24Mi
            limits:
              cpu: 50m
              memory: 64Mi
      volumes:
        - name: proxy-tls
          secret:
            secretName: proxy-tls
